[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/Poem.tscn" type="PackedScene" id=1]
[ext_resource path="res://gfx/8bit_zelda-like.png" type="Texture" id=2]
[ext_resource path="res://Assets/HomeUI.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Home.gd" type="Script" id=4]
[ext_resource path="res://Assets/ObjectCatalog.tscn" type="PackedScene" id=5]
[ext_resource path="res://gfx/res/bonsai.tres" type="Texture" id=6]
[ext_resource path="res://gfx/ui/whitePanel.png" type="Texture" id=7]
[ext_resource path="res://fonts/MainTheme.tres" type="Theme" id=8]
[ext_resource path="res://gfx/8bit_furniture-zeldalike.png" type="Texture" id=9]

[sub_resource type="TileSet" id=2]
0/name = "8bit_zelda-like.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "8bit_zelda-like.png 1"
1/texture = ExtResource( 2 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 32, 0, 32, 32 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "8bit_zelda-like.png 2"
2/texture = ExtResource( 2 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 64, 0, 32, 32 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "8bit_zelda-like.png 3"
3/texture = ExtResource( 2 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 96, 0, 32, 32 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "8bit_zelda-like.png 4"
4/texture = ExtResource( 2 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 128, 0, 32, 32 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0
5/name = "8bit_zelda-like.png 5"
5/texture = ExtResource( 2 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 160, 0, 32, 32 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape_one_way = false
5/shape_one_way_margin = 0.0
5/shapes = [  ]
5/z_index = 0
6/name = "8bit_zelda-like.png 6"
6/texture = ExtResource( 2 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 160, 32, 32, 32 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape_one_way = false
6/shape_one_way_margin = 0.0
6/shapes = [  ]
6/z_index = 0
7/name = "8bit_zelda-like.png 7"
7/texture = ExtResource( 2 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 192, 32, 32, 32 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape_one_way = false
7/shape_one_way_margin = 0.0
7/shapes = [  ]
7/z_index = 0
8/name = "8bit_zelda-like.png 8"
8/texture = ExtResource( 2 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 224, 32, 32, 32 )
8/tile_mode = 0
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/shape_offset = Vector2( 0, 0 )
8/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
8/shape_one_way = false
8/shape_one_way_margin = 0.0
8/shapes = [  ]
8/z_index = 0
9/name = "8bit_zelda-like.png 9"
9/texture = ExtResource( 2 )
9/tex_offset = Vector2( 0, 0 )
9/modulate = Color( 1, 1, 1, 1 )
9/region = Rect2( 256, 32, 32, 32 )
9/tile_mode = 0
9/occluder_offset = Vector2( 0, 0 )
9/navigation_offset = Vector2( 0, 0 )
9/shape_offset = Vector2( 0, 0 )
9/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
9/shape_one_way = false
9/shape_one_way_margin = 0.0
9/shapes = [  ]
9/z_index = 0
10/name = "8bit_zelda-like.png 10"
10/texture = ExtResource( 2 )
10/tex_offset = Vector2( 0, 0 )
10/modulate = Color( 1, 1, 1, 1 )
10/region = Rect2( 224, 64, 32, 32 )
10/tile_mode = 0
10/occluder_offset = Vector2( 0, 0 )
10/navigation_offset = Vector2( 0, 0 )
10/shape_offset = Vector2( 0, 0 )
10/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
10/shape_one_way = false
10/shape_one_way_margin = 0.0
10/shapes = [  ]
10/z_index = 0
11/name = "8bit_zelda-like.png 11"
11/texture = ExtResource( 2 )
11/tex_offset = Vector2( 0, 0 )
11/modulate = Color( 1, 1, 1, 1 )
11/region = Rect2( 192, 64, 32, 32 )
11/tile_mode = 0
11/occluder_offset = Vector2( 0, 0 )
11/navigation_offset = Vector2( 0, 0 )
11/shape_offset = Vector2( 0, 0 )
11/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
11/shape_one_way = false
11/shape_one_way_margin = 0.0
11/shapes = [  ]
11/z_index = 0
12/name = "8bit_zelda-like.png 12"
12/texture = ExtResource( 2 )
12/tex_offset = Vector2( 0, 0 )
12/modulate = Color( 1, 1, 1, 1 )
12/region = Rect2( 160, 64, 32, 32 )
12/tile_mode = 0
12/occluder_offset = Vector2( 0, 0 )
12/navigation_offset = Vector2( 0, 0 )
12/shape_offset = Vector2( 0, 0 )
12/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
12/shape_one_way = false
12/shape_one_way_margin = 0.0
12/shapes = [  ]
12/z_index = 0
13/name = "8bit_zelda-like.png 13"
13/texture = ExtResource( 2 )
13/tex_offset = Vector2( 0, 0 )
13/modulate = Color( 1, 1, 1, 1 )
13/region = Rect2( 128, 32, 32, 32 )
13/tile_mode = 0
13/occluder_offset = Vector2( 0, 0 )
13/navigation_offset = Vector2( 0, 0 )
13/shape_offset = Vector2( 0, 0 )
13/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
13/shape_one_way = false
13/shape_one_way_margin = 0.0
13/shapes = [  ]
13/z_index = 0
14/name = "8bit_zelda-like.png 14"
14/texture = ExtResource( 2 )
14/tex_offset = Vector2( 0, 0 )
14/modulate = Color( 1, 1, 1, 1 )
14/region = Rect2( 128, 64, 32, 32 )
14/tile_mode = 0
14/occluder_offset = Vector2( 0, 0 )
14/navigation_offset = Vector2( 0, 0 )
14/shape_offset = Vector2( 0, 0 )
14/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
14/shape_one_way = false
14/shape_one_way_margin = 0.0
14/shapes = [  ]
14/z_index = 0
15/name = "8bit_zelda-like.png 15"
15/texture = ExtResource( 2 )
15/tex_offset = Vector2( 0, 0 )
15/modulate = Color( 1, 1, 1, 1 )
15/region = Rect2( 96, 32, 32, 32 )
15/tile_mode = 0
15/occluder_offset = Vector2( 0, 0 )
15/navigation_offset = Vector2( 0, 0 )
15/shape_offset = Vector2( 0, 0 )
15/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
15/shape_one_way = false
15/shape_one_way_margin = 0.0
15/shapes = [  ]
15/z_index = 0
16/name = "8bit_zelda-like.png 16"
16/texture = ExtResource( 2 )
16/tex_offset = Vector2( 0, 0 )
16/modulate = Color( 1, 1, 1, 1 )
16/region = Rect2( 96, 64, 32, 32 )
16/tile_mode = 0
16/occluder_offset = Vector2( 0, 0 )
16/navigation_offset = Vector2( 0, 0 )
16/shape_offset = Vector2( 0, 0 )
16/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
16/shape_one_way = false
16/shape_one_way_margin = 0.0
16/shapes = [  ]
16/z_index = 0
17/name = "8bit_zelda-like.png 17"
17/texture = ExtResource( 2 )
17/tex_offset = Vector2( 0, 0 )
17/modulate = Color( 1, 1, 1, 1 )
17/region = Rect2( 64, 32, 32, 32 )
17/tile_mode = 0
17/occluder_offset = Vector2( 0, 0 )
17/navigation_offset = Vector2( 0, 0 )
17/shape_offset = Vector2( 0, 0 )
17/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
17/shape_one_way = false
17/shape_one_way_margin = 0.0
17/shapes = [  ]
17/z_index = 0
18/name = "8bit_zelda-like.png 18"
18/texture = ExtResource( 2 )
18/tex_offset = Vector2( 0, 0 )
18/modulate = Color( 1, 1, 1, 1 )
18/region = Rect2( 64, 64, 32, 32 )
18/tile_mode = 0
18/occluder_offset = Vector2( 0, 0 )
18/navigation_offset = Vector2( 0, 0 )
18/shape_offset = Vector2( 0, 0 )
18/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
18/shape_one_way = false
18/shape_one_way_margin = 0.0
18/shapes = [  ]
18/z_index = 0
19/name = "8bit_zelda-like.png 19"
19/texture = ExtResource( 2 )
19/tex_offset = Vector2( 0, 0 )
19/modulate = Color( 1, 1, 1, 1 )
19/region = Rect2( 32, 32, 32, 32 )
19/tile_mode = 0
19/occluder_offset = Vector2( 0, 0 )
19/navigation_offset = Vector2( 0, 0 )
19/shape_offset = Vector2( 0, 0 )
19/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
19/shape_one_way = false
19/shape_one_way_margin = 0.0
19/shapes = [  ]
19/z_index = 0
20/name = "8bit_zelda-like.png 20"
20/texture = ExtResource( 2 )
20/tex_offset = Vector2( 0, 0 )
20/modulate = Color( 1, 1, 1, 1 )
20/region = Rect2( 32, 64, 32, 32 )
20/tile_mode = 0
20/occluder_offset = Vector2( 0, 0 )
20/navigation_offset = Vector2( 0, 0 )
20/shape_offset = Vector2( 0, 0 )
20/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
20/shape_one_way = false
20/shape_one_way_margin = 0.0
20/shapes = [  ]
20/z_index = 0
21/name = "8bit_zelda-like.png 21"
21/texture = ExtResource( 2 )
21/tex_offset = Vector2( 0, 0 )
21/modulate = Color( 1, 1, 1, 1 )
21/region = Rect2( 0, 32, 32, 32 )
21/tile_mode = 0
21/occluder_offset = Vector2( 0, 0 )
21/navigation_offset = Vector2( 0, 0 )
21/shape_offset = Vector2( 0, 0 )
21/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
21/shape_one_way = false
21/shape_one_way_margin = 0.0
21/shapes = [  ]
21/z_index = 0
22/name = "8bit_zelda-like.png 22"
22/texture = ExtResource( 2 )
22/tex_offset = Vector2( 0, 0 )
22/modulate = Color( 1, 1, 1, 1 )
22/region = Rect2( 0, 64, 32, 32 )
22/tile_mode = 0
22/occluder_offset = Vector2( 0, 0 )
22/navigation_offset = Vector2( 0, 0 )
22/shape_offset = Vector2( 0, 0 )
22/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
22/shape_one_way = false
22/shape_one_way_margin = 0.0
22/shapes = [  ]
22/z_index = 0
23/name = "8bit_furniture-zeldalike.png 23"
23/texture = ExtResource( 9 )
23/tex_offset = Vector2( 0, 0 )
23/modulate = Color( 1, 1, 1, 1 )
23/region = Rect2( 0, 128, 32, 32 )
23/tile_mode = 0
23/occluder_offset = Vector2( 0, 0 )
23/navigation_offset = Vector2( 0, 0 )
23/shape_offset = Vector2( 0, 0 )
23/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
23/shape_one_way = false
23/shape_one_way_margin = 0.0
23/shapes = [  ]
23/z_index = 0
24/name = "8bit_furniture-zeldalike.png 24"
24/texture = ExtResource( 9 )
24/tex_offset = Vector2( 0, 0 )
24/modulate = Color( 1, 1, 1, 1 )
24/region = Rect2( 32, 128, 32, 32 )
24/tile_mode = 0
24/occluder_offset = Vector2( 0, 0 )
24/navigation_offset = Vector2( 0, 0 )
24/shape_offset = Vector2( 0, 0 )
24/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
24/shape_one_way = false
24/shape_one_way_margin = 0.0
24/shapes = [  ]
24/z_index = 0
25/name = "8bit_furniture-zeldalike.png 25"
25/texture = ExtResource( 9 )
25/tex_offset = Vector2( 0, 0 )
25/modulate = Color( 1, 1, 1, 1 )
25/region = Rect2( 64, 128, 32, 32 )
25/tile_mode = 0
25/occluder_offset = Vector2( 0, 0 )
25/navigation_offset = Vector2( 0, 0 )
25/shape_offset = Vector2( 0, 0 )
25/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
25/shape_one_way = false
25/shape_one_way_margin = 0.0
25/shapes = [  ]
25/z_index = 0

[node name="Home" type="TileMap"]
tile_set = SubResource( 2 )
cell_size = Vector2( 32, 32 )
cell_custom_transform = Transform2D( 8, 0, 0, 8, 0, 0 )
show_collision = true
format = 1
tile_data = PoolIntArray( 0, 19, 0, 1, 21, 0, 2, 19, 0, 3, 21, 0, 4, 20, 0, 5, 16, 0, 6, 19, 0, 7, 8, 0, 8, 21, 0, 9, 21, 0, 10, 20, 0, 11, 21, 0, 12, 19, 0, 13, 19, 0, 14, 19, 0, 15, 21, 0, 16, 21, 0, 17, 20, 0, 18, 8, 0, 19, 21, 0, 20, 21, 0, 21, 19, 0, 22, 19, 0, 23, 21, 0, 24, 21, 0, 25, 5, 0, 26, 5, 0, 27, 5, 0, 28, 5, 0, 29, 5, 0, 30, 5, 0, 31, 5, 0, 65536, 21, 0, 65537, 3, 0, 65538, 0, 0, 65539, 1, 0, 65540, 0, 0, 65541, 0, 0, 65542, 0, 0, 65543, 0, 0, 65544, 0, 0, 65545, 0, 0, 65546, 0, 0, 65547, 0, 0, 65548, 0, 0, 65549, 0, 0, 65550, 0, 0, 65551, 3, 0, 65552, 0, 0, 65553, 0, 0, 65554, 0, 0, 65555, 3, 0, 65556, 0, 0, 65557, 1, 0, 65558, 0, 0, 65559, 0, 0, 65560, 19, 0, 65561, 19, 0, 65562, 5, 0, 65563, 5, 0, 65564, 5, 0, 65565, 5, 0, 65566, 5, 0, 65567, 5, 0, 131072, 19, 0, 131073, 0, 0, 131074, 3, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 1, 0, 131081, 1, 0, 131082, 1, 0, 131083, 1, 0, 131084, 0, 0, 131085, 3, 0, 131086, 0, 0, 131087, 0, 0, 131088, 0, 0, 131089, 0, 0, 131090, 1, 0, 131091, 0, 0, 131092, 0, 0, 131093, 0, 0, 131094, 0, 0, 131095, 0, 0, 131096, 0, 0, 131097, 0, 0, 131098, 0, 0, 131099, 5, 0, 131100, 5, 0, 131101, 5, 0, 131102, 5, 0, 131103, 5, 0, 196608, 21, 0, 196609, 0, 0, 196610, 0, 0, 196611, 20, 0, 196612, 16, 0, 196613, 8, 0, 196614, 19, 0, 196615, 21, 0, 196616, 24, 0, 196617, 23, 0, 196618, 23, 0, 196619, 24, 0, 196620, 24, 0, 196621, 24, 0, 196622, 23, 0, 196623, 23, 0, 196624, 24, 0, 196625, 24, 0, 196626, 24, 0, 196627, 24, 0, 196628, 23, 0, 196629, 23, 0, 196630, 24, 0, 196631, 24, 0, 196632, 24, 0, 196633, 0, 0, 196634, 0, 0, 196635, 5, 0, 196636, 5, 0, 196637, 5, 0, 196638, 5, 0, 196639, 5, 0, 262144, 21, 0, 262145, 0, 0, 262146, 0, 0, 262147, 16, 0, 262148, 8, 0, 262149, 7, 0, 262150, 21, 0, 262151, 21, 0, 262152, 24, 0, 262153, 25, 0, 262154, 25, 0, 262155, 25, 0, 262156, 25, 0, 262157, 25, 0, 262158, 25, 0, 262159, 25, 0, 262160, 25, 0, 262161, 25, 0, 262162, 25, 0, 262163, 25, 0, 262164, 25, 0, 262165, 25, 0, 262166, 25, 0, 262167, 25, 0, 262168, 24, 0, 262169, 0, 0, 262170, 1, 0, 262171, 5, 0, 262172, 5, 0, 262173, 5, 0, 262174, 5, 0, 262175, 5, 0, 327680, 21, 0, 327681, 0, 0, 327682, 0, 0, 327683, 21, 0, 327684, 19, 0, 327685, 21, 0, 327686, 9, 0, 327687, 21, 0, 327688, 24, 0, 327689, 25, 0, 327690, 25, 0, 327691, 25, 0, 327692, 25, 0, 327693, 25, 0, 327694, 25, 0, 327695, 25, 0, 327696, 25, 0, 327697, 25, 0, 327698, 25, 0, 327699, 25, 0, 327700, 25, 0, 327701, 25, 0, 327702, 25, 0, 327703, 25, 0, 327704, 23, 0, 327705, 1, 0, 327706, 0, 0, 327707, 5, 0, 327708, 5, 0, 327709, 5, 0, 327710, 5, 0, 327711, 5, 0, 393216, 19, 0, 393217, 3, 0, 393218, 1, 0, 393219, 7, 0, 393220, 21, 0, 393221, 19, 0, 393222, 21, 0, 393223, 21, 0, 393224, 24, 0, 393225, 25, 0, 393226, 25, 0, 393227, 25, 0, 393228, 25, 0, 393229, 25, 0, 393230, 25, 0, 393231, 25, 0, 393232, 25, 0, 393233, 25, 0, 393234, 25, 0, 393235, 25, 0, 393236, 25, 0, 393237, 25, 0, 393238, 25, 0, 393239, 25, 0, 393240, 23, 0, 393241, 0, 0, 393242, 0, 0, 393243, 5, 0, 393244, 5, 0, 393245, 5, 0, 393246, 5, 0, 393247, 5, 0, 458752, 19, 0, 458753, 3, 0, 458754, 0, 0, 458755, 21, 0, 458756, 8, 0, 458757, 21, 0, 458758, 7, 0, 458759, 21, 0, 458760, 24, 0, 458761, 25, 0, 458762, 25, 0, 458763, 25, 0, 458764, 25, 0, 458765, 25, 0, 458766, 25, 0, 458767, 25, 0, 458768, 25, 0, 458769, 25, 0, 458770, 25, 0, 458771, 25, 0, 458772, 25, 0, 458773, 25, 0, 458774, 25, 0, 458775, 25, 0, 458776, 24, 0, 458777, 0, 0, 458778, 0, 0, 458779, 5, 0, 458780, 5, 0, 458781, 5, 0, 458782, 5, 0, 458783, 5, 0, 458784, 5, 0, 524288, 21, 0, 524289, 3, 0, 524290, 0, 0, 524291, 21, 0, 524292, 21, 0, 524293, 9, 0, 524294, 19, 0, 524295, 18, 0, 524296, 24, 0, 524297, 25, 0, 524298, 25, 0, 524299, 25, 0, 524300, 25, 0, 524301, 25, 0, 524302, 25, 0, 524303, 25, 0, 524304, 25, 0, 524305, 25, 0, 524306, 25, 0, 524307, 25, 0, 524308, 25, 0, 524309, 25, 0, 524310, 25, 0, 524311, 25, 0, 524312, 24, 0, 524313, 1, 0, 524314, 0, 0, 524315, 5, 0, 524316, 5, 0, 524317, 5, 0, 524318, 5, 0, 524319, 5, 0, 524320, 5, 0, 589824, 21, 0, 589825, 0, 0, 589826, 0, 0, 589827, 9, 0, 589828, 21, 0, 589829, 9, 0, 589830, 21, 0, 589831, 8, 0, 589832, 24, 0, 589833, 24, 0, 589834, 25, 0, 589835, 24, 0, 589836, 24, 0, 589837, 24, 0, 589838, 25, 0, 589839, 25, 0, 589840, 25, 0, 589841, 24, 0, 589842, 24, 0, 589843, 24, 0, 589844, 25, 0, 589845, 24, 0, 589846, 24, 0, 589847, 24, 0, 589848, 24, 0, 589849, 1, 0, 589850, 0, 0, 589851, 5, 0, 589852, 5, 0, 589853, 5, 0, 589854, 5, 0, 589855, 5, 0, 655360, 7, 0, 655361, 0, 0, 655362, 0, 0, 655363, 21, 0, 655364, 9, 0, 655365, 19, 0, 655366, 9, 0, 655367, 21, 0, 655368, 24, 0, 655369, 25, 0, 655370, 25, 0, 655371, 25, 0, 655372, 25, 0, 655373, 24, 0, 655374, 25, 0, 655375, 25, 0, 655376, 25, 0, 655377, 24, 0, 655378, 25, 0, 655379, 25, 0, 655380, 25, 0, 655381, 25, 0, 655382, 25, 0, 655383, 25, 0, 655384, 24, 0, 655385, 0, 0, 655386, 0, 0, 655387, 5, 0, 655388, 5, 0, 655389, 5, 0, 655390, 5, 0, 655391, 5, 0, 720896, 21, 0, 720897, 0, 0, 720898, 1, 0, 720899, 19, 0, 720900, 19, 0, 720901, 9, 0, 720902, 9, 0, 720903, 21, 0, 720904, 24, 0, 720905, 25, 0, 720906, 25, 0, 720907, 25, 0, 720908, 25, 0, 720909, 24, 0, 720910, 25, 0, 720911, 25, 0, 720912, 25, 0, 720913, 24, 0, 720914, 25, 0, 720915, 25, 0, 720916, 25, 0, 720917, 25, 0, 720918, 25, 0, 720919, 25, 0, 720920, 24, 0, 720921, 0, 0, 720922, 1, 0, 720923, 5, 0, 720924, 5, 0, 720925, 5, 0, 720926, 5, 0, 720927, 5, 0, 786432, 16, 0, 786433, 0, 0, 786434, 0, 0, 786435, 21, 0, 786436, 21, 0, 786437, 21, 0, 786438, 19, 0, 786439, 21, 0, 786440, 24, 0, 786441, 23, 0, 786442, 23, 0, 786443, 25, 0, 786444, 25, 0, 786445, 24, 0, 786446, 25, 0, 786447, 25, 0, 786448, 25, 0, 786449, 24, 0, 786450, 25, 0, 786451, 25, 0, 786452, 25, 0, 786453, 25, 0, 786454, 25, 0, 786455, 25, 0, 786456, 24, 0, 786457, 0, 0, 786458, 0, 0, 786459, 5, 0, 786460, 5, 0, 786461, 5, 0, 786462, 5, 0, 786463, 5, 0, 851968, 19, 0, 851969, 0, 0, 851970, 3, 0, 851971, 0, 0, 851972, 21, 0, 851973, 9, 0, 851974, 21, 0, 851975, 9, 0, 851976, 24, 0, 851977, 2, 0, 851978, 25, 0, 851979, 25, 0, 851980, 25, 0, 851981, 24, 0, 851982, 25, 0, 851983, 25, 0, 851984, 25, 0, 851985, 24, 0, 851986, 25, 0, 851987, 25, 0, 851988, 25, 0, 851989, 25, 0, 851990, 25, 0, 851991, 25, 0, 851992, 24, 0, 851993, 0, 0, 851994, 0, 0, 851995, 5, 0, 851996, 5, 0, 851997, 5, 0, 851998, 5, 0, 851999, 5, 0, 917504, 21, 0, 917505, 0, 0, 917506, 3, 0, 917507, 0, 0, 917508, 0, 0, 917509, 21, 0, 917510, 21, 0, 917511, 21, 0, 917512, 24, 0, 917513, 24, 0, 917514, 23, 0, 917515, 23, 0, 917516, 24, 0, 917517, 24, 0, 917518, 24, 0, 917519, 0, 0, 917520, 24, 0, 917521, 24, 0, 917522, 24, 0, 917523, 24, 0, 917524, 23, 0, 917525, 23, 0, 917526, 24, 0, 917527, 24, 0, 917528, 24, 0, 917529, 0, 0, 917530, 0, 0, 917531, 5, 0, 917532, 5, 0, 917533, 5, 0, 917534, 5, 0, 917535, 5, 0, 983040, 20, 0, 983041, 0, 0, 983042, 0, 0, 983043, 3, 0, 983044, 0, 0, 983045, 1, 0, 983046, 0, 0, 983047, 0, 0, 983048, 0, 0, 983049, 0, 0, 983050, 0, 0, 983051, 0, 0, 983052, 0, 0, 983053, 0, 0, 983054, 0, 0, 983055, 0, 0, 983056, 0, 0, 983057, 0, 0, 983058, 0, 0, 983059, 0, 0, 983060, 3, 0, 983061, 3, 0, 983062, 3, 0, 983063, 3, 0, 983064, 0, 0, 983065, 0, 0, 983066, 0, 0, 983067, 5, 0, 983068, 5, 0, 983069, 0, 0, 983070, 5, 0, 983071, 5, 0, 1048576, 21, 0, 1048577, 0, 0, 1048578, 0, 0, 1048579, 3, 0, 1048580, 3, 0, 1048581, 0, 0, 1048582, 0, 0, 1048583, 0, 0, 1048584, 3, 0, 1048585, 3, 0, 1048586, 3, 0, 1048587, 3, 0, 1048588, 3, 0, 1048589, 0, 0, 1048590, 0, 0, 1048591, 1, 0, 1048592, 0, 0, 1048593, 0, 0, 1048594, 0, 0, 1048595, 3, 0, 1048596, 0, 0, 1048597, 0, 0, 1048598, 0, 0, 1048599, 0, 0, 1048600, 0, 0, 1048601, 0, 0, 1048602, 0, 0, 1048603, 0, 0, 1048604, 5, 0, 1048605, 5, 0, 1048606, 5, 0, 1048607, 5, 0, 1114112, 19, 0, 1114113, 0, 0, 1114114, 0, 0, 1114115, 0, 0, 1114116, 0, 0, 1114117, 0, 0, 1114118, 0, 0, 1114119, 1, 0, 1114120, 0, 0, 1114121, 0, 0, 1114122, 0, 0, 1114123, 0, 0, 1114124, 0, 0, 1114125, 0, 0, 1114126, 0, 0, 1114127, 0, 0, 1114128, 1, 0, 1114129, 0, 0, 1114130, 0, 0, 1114131, 0, 0, 1114132, 0, 0, 1114133, 16, 0, 1114134, 0, 0, 1114135, 0, 0, 1114136, 0, 0, 1114137, 0, 0, 1114138, 0, 0, 1114139, 0, 0, 1114140, 5, 0, 1114141, 5, 0, 1114142, 5, 0, 1114143, 5, 0, 1179648, 21, 0, 1179649, 19, 0, 1179650, 19, 0, 1179651, 21, 0, 1179652, 16, 0, 1179653, 20, 0, 1179654, 16, 0, 1179655, 21, 0, 1179656, 19, 0, 1179657, 19, 0, 1179658, 21, 0, 1179659, 20, 0, 1179660, 16, 0, 1179661, 19, 0, 1179662, 21, 0, 1179663, 21, 0, 1179664, 19, 0, 1179665, 19, 0, 1179666, 21, 0, 1179667, 20, 0, 1179668, 16, 0, 1179669, 16, 0, 1179670, 19, 0, 1179671, 19, 0, 1179672, 21, 0, 1179673, 21, 0, 1179674, 5, 0, 1179675, 5, 0, 1179676, 5, 0, 1179677, 5, 0, 1179678, 5, 0, 1179679, 5, 0, 1245212, 5, 0, 1245213, 5, 0 )
script = ExtResource( 4 )

[node name="Furniture" type="Node2D" parent="."]

[node name="Poem" parent="." instance=ExtResource( 1 )]
visible = false
margin_left = -36.0
margin_top = 80.0
margin_right = -36.0
margin_bottom = 80.0

[node name="HomeUI" parent="." instance=ExtResource( 3 )]
mouse_filter = 2

[node name="OtherButtons" type="Control" parent="."]
margin_right = 1057.0
margin_bottom = 606.0
mouse_filter = 2
theme = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OtherButtonsBG" type="NinePatchRect" parent="OtherButtons"]
margin_left = 804.0
margin_top = 404.0
margin_right = 988.0
margin_bottom = 568.0
rect_min_size = Vector2( 184, 150 )
texture = ExtResource( 7 )
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="OtherButtons"]
margin_left = 820.0
margin_top = 424.0
margin_right = 968.0
margin_bottom = 464.0
rect_min_size = Vector2( 142, 40 )
text = "Begin Writing"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="OtherButtons"]
margin_left = 812.0
margin_top = 496.0
margin_right = 980.0
margin_bottom = 536.0
rect_min_size = Vector2( 142, 40 )
text = "View Catalogue"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ghost" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.603922 )
texture = ExtResource( 6 )

[node name="Catalogue" parent="." instance=ExtResource( 5 )]
visible = false

[node name="BuildArea" type="Area2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="BuildArea"]
position = Vector2( 510, 302 )
polygon = PoolVector2Array( -222, -174, -222, -14, -190, -14, -190, 18, -222, 18, -222, 82, -158, 82, -158, 114, -190, 114, -190, 146, -94, 146, -94, 18, -158, 18, -158, -14, -62, -14, -62, 146, 26, 146, 34, 146, 34, -14, 130, -14, 130, 18, 66, 18, 66, 146, 258, 146, 258, 18, 162, 18, 162, -14, 258, -14, 258, -174 )

[connection signal="poem_complete" from="Poem" to="." method="_on_Poem_poem_complete"]
[connection signal="typed" from="Poem" to="." method="_on_Poem_typed"]
[connection signal="dismissed" from="HomeUI" to="." method="_on_HomeUI_dismissed"]
[connection signal="pressed" from="OtherButtons/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="OtherButtons/Button2" to="." method="_on_Button2_pressed"]
[connection signal="item_chosen" from="Catalogue" to="." method="_on_Catalogue_item_chosen"]
[connection signal="input_event" from="BuildArea" to="." method="_on_BuildArea_input_event"]
